--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'DS-Digital';
-    src: url('./DS-DIGIB.ttf') format('truetype');
+    src: url('./DS-DIGIB.TTF') format('truetype');
 }
 
 @font-face {
